{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 28,
  "lineage": "048da101-e61c-813f-c3f6-04e180631a5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008b85aa3ff5c1b02",
            "arn": "arn:aws:ec2:ap-south-1:792635873873:instance/i-0c606985be60c259b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c606985be60c259b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tesrt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b136daf61e564762",
            "private_dns": "ip-192-168-1-183.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.183",
            "public_dns": "ec2-3-110-179-91.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.179.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b98a2f6de7baed8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035fd59d6c0ad4d3e",
            "tags": {
              "Environment": "Production",
              "Name": "Redhat"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Redhat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0755ee2c3ffb269b4"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:792635873873:instance/i-0ba4e3ab1b328282e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba4e3ab1b328282e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tesrt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-025ff434c45f5d219",
            "private_dns": "ip-192-168-2-98.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.98",
            "public_dns": "ec2-35-154-87-215.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.87.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e02b8d24013ef7d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe4f74a53f55968b",
            "tags": {
              "Environment": "Production",
              "Name": "Ubuntu"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0755ee2c3ffb269b4"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792635873873:internet-gateway/igw-0407535add0b47f0e",
            "id": "igw-0407535add0b47f0e",
            "owner_id": "792635873873",
            "tags": {
              "Name": "Terraform_IG"
            },
            "tags_all": {
              "Name": "Terraform_IG"
            },
            "vpc_id": "vpc-0129c6b41fb71f6b4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792635873873:route-table/rtb-030c32d90edd6358a",
            "id": "rtb-030c32d90edd6358a",
            "owner_id": "792635873873",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0407535add0b47f0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformRoteTable"
            },
            "tags_all": {
              "Name": "TerraformRoteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0129c6b41fb71f6b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab8c040037753aeb",
            "route_table_id": "rtb-030c32d90edd6358a",
            "subnet_id": "subnet-035fd59d6c0ad4d3e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TerraformSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792635873873:security-group/sg-0755ee2c3ffb269b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0755ee2c3ffb269b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "TerraformSG",
            "name_prefix": "",
            "owner_id": "792635873873",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "TerraformSG"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TerraformSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0129c6b41fb71f6b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1_Lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792635873873:subnet/subnet-035fd59d6c0ad4d3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035fd59d6c0ad4d3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792635873873",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "TerraformPublicSubnetLab1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TerraformPublicSubnetLab1"
            },
            "vpc_id": "vpc-0129c6b41fb71f6b4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1_Lab2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792635873873:subnet/subnet-0fe4f74a53f55968b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe4f74a53f55968b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792635873873",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "TerraformPublicSubnetLab2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TerraformPublicSubnetLab2"
            },
            "vpc_id": "vpc-0129c6b41fb71f6b4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792635873873:vpc/vpc-0129c6b41fb71f6b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-001593c0a9172d7c8",
            "default_route_table_id": "rtb-01a5e1a9e45d80fb2",
            "default_security_group_id": "sg-061426ea9a8a49277",
            "dhcp_options_id": "dopt-07920d97c6cab86d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0129c6b41fb71f6b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a5e1a9e45d80fb2",
            "owner_id": "792635873873",
            "tags": {
              "Environment": "Production",
              "Name": "TerraformVpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TerraformVpc"
            }
          }
        }
      ]
    }
  ]
}